<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/pad"
    tools:context=".ContactoActivity">

    <TextView
        android:id="@+id/ctcTvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad"
        android:text="@string/ctcTitulo"
        app:layout_constraintBottom_toTopOf="@+id/tilCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctcTvTitulo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ctcTietCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ctcCorreo" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAsunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCorreo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ctcTietAsunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ctcAsunto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilAsunto">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ctcTietMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ctcMensaje"
            android:lines="5" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad"
        android:text="@string/ctcBoton"
        android:background="@color/colorPrimary"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilMensaje" />

</android.support.constraint.ConstraintLayout>